src/test/ui/async-await/no-const-async.stderr
error: expected identifier, found keyword `async`
  --> $DIR/no-const-async.rs:5:11
   |
LL | pub const async fn x() {}
   |           ^^^^^ expected identifier, found keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL | pub const r#async fn x() {}
   |           ^^^^^^^

error: expected `:`, found keyword `fn`
  --> $DIR/no-const-async.rs:5:17
   |
LL | pub const async fn x() {}
   |                 ^^ expected `:`

error: aborting due to 2 previous errors

